<resources>
    <string name="app_name">MiBandSDKExample</string>
    <string name="status0">No device connected</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="start_scan">Find device</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="disconnect_band">Disconnect Band</string>
    <string name="connect_band">Connect Band</string>
    <string name="status_doScan">Scan/connect to devices</string>
    <string name="vibrate_band">Vibrate</string>
    <string name="vibrate_on_time">on time(milli)</string>
    <string name="vibrate_off_time">off time(millis)</string>
    <string name="vibrate_repeat">Repeat Pattern</string>
    <string name="vibrate_led">LED on/off</string>
    <string name="lastUpdated">Last Updated : </string>
</resources>